@@ -148,6 +148,13 @@ Lua:
    the (now) last return value, the customKeys table (allocation optimisation)
  ! Spring.GetUnit{Armored,IsActive} now works on enemies in LoS
  ! Spring.GetUnitMass no longer works on enemies outside of LoS
+ - Added a boolean parameter to Spring.GetCameraState, if set to false it will return the current camera name
+   and then the following camera-specific values on the stack:
+     fps, rot -> oldHeight
+     ta -> height, angle, flipped
+     spring -> rx, ry, rz, dist
+     free -> rx, ry, rz, vx, vy, vz, avx, avy, avz
+     ov -> (nil)
 
 AI:
  - reveal unit's captureProgress, buildProgress and paralyzeDamage params through
